그냥 버그수정